--- a/register.html
+++ b/register.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles-register.css">
@@ -43,6 +42,9 @@
             <div class="password-input">
                 <label for="password" class="password-label">Geslo:</label>
                 <input type="password" id="password" class="password-field" placeholder="Ustvarite svoje geslo">
+            </div>
+            <div class="already-account">
+                <a href="login.html" style="color: #fff; text-decoration: none;">Že imate račun?</a>
             </div>
             <div class="confirm-button-container">
                 <button class="confirm-button">Ustvarite račun</button>
