--- a/login.html
+++ b/login.html
@@ -29,8 +29,11 @@
     </header>
 
     <div class="menu-div">
+        <!-- Back Arrow Inside the Menu -->
+        <a href="register.html" class="back-arrow">⇦</a>
+
         <div class="content">
-            <h2 class="login-title">» Prijavite se «</h2>
+            <h2 class="login-title">》 Prijavite se 《</h2>
 
             <div class="name-input">
                 <label for="name" class="name-label">Uporabniško ime:</label>
@@ -125,3 +128,4 @@
 </body>
 
 </html>
+
