--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
 
     <div class="menu-div">
         <div class="content">
-            <h2 class="register-title">» Ustvarite svoj račun «</h2>
+            <h2 class="register-title">》 Ustvarite svoj račun 《</h2>
 
             <div class="name-input">
                 <label for="name" class="name-label">Uporabniško ime:</label>
