--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="menu-div">
         <div class="content">
-            <h2 class="order-title">» Ustvarite svoje naročilo «</h2>
+            <h2 class="order-title">》 Ustvarite svoje naročilo 《</h2>
             <div class="imagemenu-div">
                 <div class="image-gallery">
                     <img src="images/coffee1.jpg" alt="coffee1">
