--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
     <div class="menu-div">
         <!-- Back Arrow Inside the Menu -->
-        <a href="register.html" class="back-arrow">⇦</a>
+        <a href="register.html" class="back-arrow">Nazaj na registracijo</a>
 
         <div class="content">
             <h2 class="login-title">》 Prijavite se 《</h2>
