--- a/login.html
+++ b/login.html
@@ -50,9 +50,9 @@
         </div>
     </div>
 
-    <!-- javascript reči -->
+    <!-- JavaScript -->
     <script>
-        // spustni menu
+        // Spustni menu
         document.addEventListener('DOMContentLoaded', function () {
             const hamburgerMenu = document.getElementById('hamburger-menu');
             const dropdownMenu = document.getElementById('spustni-menu');
@@ -62,7 +62,7 @@
                 dropdownMenu.classList.toggle('show'); // toggle 'show' class
             });
 
-            // close menu if clicked outside of it
+            // Close menu if clicked outside of it
             document.addEventListener('click', function (event) {
                 if (!hamburgerMenu.contains(event.target) && !dropdownMenu.contains(event.target)) {
                     dropdownMenu.classList.remove('show'); // remove 'show' class
@@ -118,7 +118,8 @@
                         }
                     }).then((result) => {
                         if (result.isConfirmed) {
-                            location.reload(); // refresh page
+                            // Redirect to index.html after confirmation
+                            window.location.href = 'index.html'; // Redirect to the index page
                         }
                     });
                 }
@@ -128,4 +129,3 @@
 </body>
 
 </html>
-
