--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
                 <li><a href="index.html">Novo Naročilo</a></li>
             </ul>
         </div>
+        <span class="credits" id="credits">(Credits)</span>
     </header>
 
     <div class="menu-div">
@@ -33,7 +34,7 @@
         <a href="register.html" class="back-arrow">⇦</a>
 
         <div class="content">
-            <h2 class="login-title">》 Prijavite se 《</h2>
+            <h2 class="login-title">Prijavite se</h2>
 
             <div class="name-input">
                 <label for="name" class="name-label">Uporabniško ime:</label>
@@ -124,8 +125,26 @@
                     });
                 }
             });
+
+            // SweetAlert when Credits is clicked
+            const credits = document.getElementById('credits');
+            credits.addEventListener('click', function () {
+                Swal.fire({
+                    title: 'Credits',
+                    text: 'This web page was created by Tjan Gabrovec.',
+                    icon: 'info',
+                    confirmButtonText: 'Close',
+                    confirmButtonColor: '#4A443F',
+                    background: '#000',
+                    color: '#fff',
+                    customClass: {
+                        popup: 'my-sweetalert'
+                    }
+                });
+            });
         });
     </script>
 </body>
 
 </html>
+
