--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
             </div>
             <div class="name-input">
                 <label for="name" class="name-label">Ime:</label>
-                <input type="text" id="name" class="name-field" placeholder="Vnesite ime naročnika">
+                <input type="text" id="name" class="name-field" placeholder="Vnesite ime naročnika" maxlength="30">
             </div>
             <div class="address-input">
                 <label for="address" class="address-label">Naslov za dostavo:</label>
-                <input type="text" id="address" class="address-field" placeholder="Vnesite Naslov za dostavo">
+                <input type="text" id="address" class="address-field" placeholder="Vnesite Naslov za dostavo" maxlength="30">
             </div>
+            
             <div class="size-selection">
                 <label for="size" class="size-label">Velikost:</label>
                 <select id="size" class="size-field">
