--- a/login.html
+++ b/login.html
@@ -38,11 +38,11 @@
 
             <div class="name-input">
                 <label for="name" class="name-label">Uporabniško ime:</label>
-                <input type="text" id="name" class="name-field" placeholder="Vnesite svoje uporabniško ime">
+                <input type="text" id="name" class="name-field" placeholder="Vnesite svoje uporabniško ime" maxlength="30">
             </div>
             <div class="password-input">
                 <label for="password" class="password-label">Geslo:</label>
-                <input type="password" id="password" class="password-field" placeholder="Vnesite svoje geslo">
+                <input type="password" id="password" class="password-field" placeholder="Vnesite svoje geslo" maxlength="30">
             </div>
 
             <div class="confirm-button-container">
