--- a/register.html
+++ b/register.html
@@ -36,15 +36,15 @@
 
             <div class="name-input">
                 <label for="name" class="name-label">Uporabniško ime:</label>
-                <input type="text" id="name" class="name-field" placeholder="Ustvarite svoje uporabniško ime">
+                <input type="text" id="name" class="name-field" placeholder="Ustvarite svoje uporabniško ime" maxlength="30">
             </div>
             <div class="mail-input">
                 <label for="mail" class="mail-label">Email:</label>
-                <input type="mail" id="mail" class="mail-field" placeholder="Vnesite svoj Email">
+                <input type="mail" id="mail" class="mail-field" placeholder="Vnesite svoj Email" maxlength="30">
             </div>
             <div class="password-input">
                 <label for="password" class="password-label">Geslo:</label>
-                <input type="password" id="password" class="password-field" placeholder="Ustvarite svoje geslo">
+                <input type="password" id="password" class="password-field" placeholder="Ustvarite svoje geslo" maxlength="30">
             </div>
             <div class="already-account">
                 <a href="login.html" style="color: #fff; text-decoration: none;">Že imate račun?</a>
